--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6"
   }
 }
